--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="video">
             <h2 class="video-title">Видео 1</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Zog8yst2zfs?si=mmYvIuwD3AjBY6-1"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Zog8yst2zfs?si=MI3fZKxujkR1d2N"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -25,7 +25,7 @@
         <div class="video">
             <h2 class="video-title">Видео 2</h2>
             <!-- <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" allowfullscreen></iframe> -->
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/_taRxLTvSs0?si=JPdSyYbmdcO_0DMe"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/_taRxLTvSs0?si=y0NjqiY8N1xgPxAI"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -38,7 +38,8 @@
     </div>
 
     <footer>
-        <p>Подписывайтесь на мой <a href="https://www.youtube.com/@JavaFullStackDeveloper" target="_blank">YouTube канал</a>!</p>
+        <p>Подписывайтесь на мой <a href="https://www.youtube.com/@JavaFullStackDeveloper" target="_blank">YouTube
+                канал</a>!</p>
     </footer>
 </body>
 
