--- a/index.html
+++ b/index.html
@@ -24,17 +24,19 @@
 
         <div class="video">
             <h2 class="video-title">Видео 2</h2>
-            <!-- <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" allowfullscreen></iframe> -->
             <iframe width="560" height="315" src="https://www.youtube.com/embed/_taRxLTvSs0?si=y0NjqiY8N1xgPxAI"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
-        <!-- <div class="video">
+        <div class="video">
             <h2 class="video-title">Видео 3</h2>
-            <iframe src="https://www.youtube.com/embed/VIDEO_ID_3" allowfullscreen></iframe>
-        </div> -->
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/WeUk2kxJlyc?si=c750PJnRlGeg7i_S"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
     </div>
 
     <footer>
