--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Учите Java с нашим видеоканалом! Уроки Java, SQL и Spring для начинающих и практикующих.">
+    <meta name="keywords" content="Java обучение, уроки Java, SQL, Spring, программирование, Java на русском, видео Java">
+    <meta name="author" content="Java Full Stack Developer">
+    <meta name="robots" content="index, follow">
     <title>Мои Видео</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
